# gaia-classifier

./: .gitignore  README.md  config.py  importance.py  main.py  pyproject.toml  submission_file.csv
0/evaluation/: gaia_pipeline.joblib
1/evaluation/: gaia_pipeline.joblib
2/evaluation/: gaia_pipeline.joblib
3/evaluation/: gaia_pipeline.joblib
4/evaluation/: gaia_pipeline.joblib
data/: dataGaia_submission_sample.csv  head_description.csv  head_description.xlsx  submission_file.csv
evaluation/: gaia_pipeline.joblib
evaluation_0.5/: combined_model_performance_data.json  plot.py
evaluation_0.5/e_1_1f/data/: submission_file.csv
evaluation_0.5/e_1_1f/evaluation/: gaia_pipeline.joblib
evaluation_0.5/e_2_1f/evaluation/: gaia_pipeline.joblib
evaluation_0.5/e_3_5f/data/: submission_file.csv
evaluation_0.5/e_3_5f/evaluation/: gaia_pipeline.joblib
evaluation_0.5/e_4_25f/data/: submission_file.csv
evaluation_0.5/e_4_25f/evaluation/: gaia_pipeline.joblib
evaluation_1.0/: combined_model_performance_data_100_percent.json  combined_model_performance_data_100_percent_cursed.json  plot.py
evaluation_1.0/e_1_1f/evaluation/: gaia_pipeline.joblib
evaluation_1.0/e_2_1f/data/: submission_file.csv
evaluation_1.0/e_2_1f/evaluation/: gaia_pipeline.joblib
evaluation_1.0/e_3_5f/data/: submission_file.csv
evaluation_1.0/e_3_5f/evaluation/: gaia_pipeline.joblib
importance/: 100_best.txt
report/: best_classifier_heatmap.py  gridsearch_combo_plot.py  heatmaps.py  heatmaps.txt  model_loader.py  parser.py  plot.py
report/data/full_data/: model1.txt  model2.txt  (+6 more)
(+2 files in other folders)
